fdo#78292: Tags related to checkbox r being written in text tag for sdt cntnt.

- The parent node for checked, checkedState, uncheckedState is getting overwritten by "text"
- text node is a leaf node, and should not have any children.

Change-Id: Ic269525001e914adc1aa328c92be5fe4d5d1b3e7
Reviewed-on: https://gerrit.libreoffice.org/9278
Reviewed-by: Jacobo Aragunde Pérez <jaragunde@igalia.com>
Tested-by: Jacobo Aragunde Pérez <jaragunde@igalia.com>